fix: 增加日志